--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,39 @@
     margin: 0;
     padding: 0;
     border: 0;
+    box-sizing: border-box;
     font-family: cursive, 'Times New Roman', Times, serif;
     font-size: 1.0em;
     color: #3a3a3a;
 }
 
-/* hero image */
+/* hero image and animation */
 
 #hero {
-    background:url(/assets/images/hero-image.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+    height: 600px;
+    width: 100%;
+    background:url(/assets/images/hero-image.jpg) no-repeat center center;
+    
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes hero-zoom {
+
+    from {
+        transform: scale(1);
+    }
+    to { transform: scale(1.3);
+
+    }
+    
+}
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
 }
 
 /* headings navigation */
@@ -43,7 +64,7 @@ letter-spacing: 1px;
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 20px;
+    margin-right: 20px
 }
 
 #menu a {
@@ -51,5 +72,9 @@ letter-spacing: 1px;
 }
 
 #menu a:hover {
+    background-color: green;
+}
+
+.active {
     border-bottom: 2px solid black;
 }
