--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,42 @@
     overflow: hidden;
 }
 
+#cover-text  {
+    color: black;
+    font-family:'Times New Roman', Times, serif;
+    letter-spacing: 0px;
+
+    width: 300px;
+    height: 120px;
+    padding-top: 20px;
+    padding-left: 10px;
+
+    background-color: rgba(250, 250, 250, 0.8);
+
+    bottom: 150px;
+    right: 80px;
+
+    position: absolute;
+
+
+}
 /* headings navigation */
 
 h1 {
 text-transform: uppercase;
 color: black;
 letter-spacing: 1px;
+}
+
+h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 140%;
+}
+
+h3{
+    text-align: center;
+    font-size: 100%;
 }
 
 #logo {
@@ -72,7 +102,7 @@ letter-spacing: 1px;
 }
 
 #menu a:hover {
-    background-color: green;
+   border-bottom: 2px solid black;
 }
 
 .active {
