--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,8 @@
     overflow: hidden;
 }
 
+/* cover text */
+
 #cover-text  {
     color: black;
     font-family:'Times New Roman', Times, serif;
@@ -55,8 +57,23 @@
     right: 80px;
 
     position: absolute;
+}
 
+#summary-text {
+    color: black;
+    font-family:'Times New Roman', Times, serif;
+    letter-spacing: 0px;
 
+    width: 300px;
+    height: 440px;
+    padding-top: 20px;
+
+    background-color: rgba(250, 250, 250, 0.8);
+
+    bottom: 30px;
+    left: 80px;
+
+    position: absolute;
 }
 /* headings navigation */
 
