--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,8 @@ h3{
     font-size: 100%;
 }
 
+/* logo */
+
 #logo {
     float: left;
     font-size: 250%;
@@ -135,7 +137,8 @@ h3{
     padding: 20px 0;
     box-sizing: border-box;
     letter-spacing: 1px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(172, 228, 170);
+    
 }
 
 .footer-notes a {
