--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,20 +174,29 @@ h3{
 iframe {
     width: 50%;
     height: 300px;
-    padding: 10px;
+    padding: 2px;
 }
 
 /* info */
 
 #info > p {
     float: right;
-    width: 40%;
+    width: 50%;
     padding: 10px;
     text-align: center;
     background-color: rgb(250, 199, 199);
+    border: solid 2px white;
 }
 
 #info > p, iframe {
 line-height: 20px;
+}
+
+/* history */
+
+#early-days > h3 {
+    clear: both;
+    float: left;
+
 }
 
