--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    font-family: cursive, 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif (Arial, Helvetica, sans-serif);
     font-size: 1.0em;
     color: #3a3a3a;
 }
@@ -47,9 +47,10 @@
     letter-spacing: 0px;
 
     width: 300px;
-    height: 120px;
+    height: 100px;
     padding-top: 20px;
     padding-left: 10px;
+    margin-bottom: 50px;
 
     background-color: rgba(250, 250, 250, 0.8);
 
@@ -64,8 +65,8 @@
     font-family:'Times New Roman', Times, serif;
     letter-spacing: 0px;
 
-    width: 300px;
-    height: 440px;
+    width: 350px;
+    height: 300px;
     padding-top: 20px;
 
     background-color: rgba(250, 250, 250, 0.8);
@@ -180,6 +181,7 @@ iframe {
 /* info */
 
 #info > p {
+    font-size: 1.2em;
     float: right;
     width: 50%;
     padding: 10px;
@@ -193,10 +195,3 @@ line-height: 20px;
 }
 
 /* history */
-
-#early-days > h3 {
-    clear: both;
-    float: left;
-
-}
-
