--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,11 +196,12 @@ line-height: 20px;
 
 #facts{
     clear: both;
-    font-size: 1.2em;
-    width: 60%;
-    padding: 20px;
-    background-color: rgb(201, 236, 131);
-    border: solid 5px orange;
+    font-size: 1.5em;
+    width: 100%;
+    padding: 30px;
+    border: solid 5px #ffa500;
+    text-align: center;
+    list-style-type: none;
 }
 
 #tour {
