--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,10 +206,11 @@ line-height: 20px;
 
 #tour {
     clear: both;
-    width: 100%;
-    text-align: center;
 }
 
+#video {
+    width: 50%;
+    padding: 0;
+}
 
-
-
+/* history */
