--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,9 @@ line-height: 20px;
 
 #tour {
     clear: both;
+    display: block;
+  margin-left: 50px;
+  border: solid 1px black;
 }
 
 #video {
@@ -217,5 +220,6 @@ line-height: 20px;
     text-align: left;
     padding-left: 130px;
 }
+
 
 /* history */
