--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 #hero {
     height: 600px;
     width: 100%;
-    background:url(/assets/images/hero-image.jpg) no-repeat center center;
+    background:url(../images/hero-image.jpg) no-repeat center center;
     
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -139,7 +139,7 @@ h3{
     padding: 20px 0;
     box-sizing: border-box;
     letter-spacing: 1px;
-    background-color: rgb(172, 228, 170);  
+    background-color: rgb(35, 221, 28);  
 }
 
 .footer-notes a {
