--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,7 @@ body{
 /* text on hero image */
 
 #cover-text  {
-    color: black;
-    font-family:'Times New Roman', Times, serif;
     letter-spacing: 0px;
-
     width: 300px;
     height: 100px;
     padding-top: 20px;
@@ -80,7 +77,8 @@ body{
 
     position: absolute;
 }
-/* headings navigation */
+
+/* headings */
 
 h1 {
 text-transform: uppercase;
@@ -136,9 +134,9 @@ h3{
 
 /* footer */
 
-.footer {
+footer {
     width: 100vw;
-    display: block;
+    display: inline-block;
     overflow: hidden;
     padding: 20px 0;
     box-sizing: border-box;
@@ -249,3 +247,42 @@ list-style-type: none;
 text-align: center;
 }
 
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
+    /* Homepage-small */
+    #hero {
+        width: 100%;
+        height: 300px;
+    }
+
+    #logo {
+       padding-left: 50px;
+        
+    }
+
+    #menu li {
+        font-size: medium;
+        padding-right: 30px;
+        
+    }
+
+    #summary-text {
+        padding-top: 255px;
+        background: none;
+    }
+
+    #cover-text {
+        background-color: orange;
+
+    }
+    
+   .footer-notes a {
+       margin-left: 80px;
+       display: inline-block;
+       
+      
+   }
+
+}
