--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,39 @@ list-style-type: none;
 }
 
 #contact  {
-text-align: center;
+    text-align: center;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
 
+        /* homepage */
+        
+      background-color: lightblue;
+    }
+    #logo {
+        font-size: xlarge;
+    }
+
+
+    #menu, li {
+        font-size: medium;
+        float: left;
+        margin-left: 30px;
+    }
+
+    #summary-text {
+        height: 190px;
+        font-size: small;
+    }
+
+    #cover-text {
+        font-size: small;
+        
+    }
+
+    .footer-notes a {
+        margin-left: 100px;
+    }
+
+  }
