move opening times text to under map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,23 +175,20 @@ footer {
 /* map and info */
 
 iframe {
-    width: 50%;
+    width: 100%;
     height: 300px;
     padding: 2px;
 }
 
-#info > p {
-    font-size: 1.2em;
-    float: right;
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(250, 199, 199);
-    border: solid 2px white;
-}
+
 
 #info > p, iframe {
 line-height: 20px;
+}
+
+#open {
+    border: black 1px solid;
+    text-align: center;
 }
 
 /* Fun facts */
@@ -247,397 +244,9 @@ list-style-type: none;
     text-align: center;
 }
 
-/* Smallest devices */
 
-@media only screen and (max-width: 600px) {
-
-    body {
-        background-color: cadetblue;
+@media (max-width: 400px) {
+    * {
+        font-size: 0.5em;
     }
- 
-    #logo {
-        font-size: xlarge;
-    }
-
-
-    #menu, li {
-        font-size: medium;
-        float: left;
-        margin-left: 30px;
-    }
-
-    #summary-text {
-        height: 190px;
-        font-size: small;
-    }
-
-    #cover-text {
-        font-size: small;   
-    }
-
-    .footer-notes a {
-        margin-left: 100px;
-    }
-
-    #doc {
-        margin-left: 130px;
-
-    }
-
-    #photos{
-        column-count: 1;
-    }
-
-    #facts{
-        clear: both;
-        font-size: small;
-        width: 100%;
-        padding: 70px;
-        border: none;
-        text-align: center;
-        list-style-type: none;
-    }
-
-    #tour, img {
-       width: 100%;
-    }
-
-    #video {
-        margin-left: 130px; 
-    }
-   
-  }
-
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-    body {
-        background-color: cadetblue;
-    }
-
-      #menu, li {
-          display: inline-block
-      }
-
-      #summary-text {
-          font-size: small;
-          height: 40%; 
-      }
-
-      #cover-text {
-        margin-bottom: 120px;
-      }
-
-      .footer-notes a {
-        margin-left: 110px;
-    }
-
-      #doc {
-          margin-left: 160px;
-      }
-
-      #photos{
-        column-count: 1;
-    }
-
-    #facts {
-        border: none;
-    }
-
-    #tour, img {
-        width: 100%;
-     }
-
-     #video {
-         margin-left: 160px
-     }
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-    body {
-        background-color: cadetblue;
-    }
-
-    #menu, li {
-        margin-left: 50px;
-    }
-
-    .footer-notes a {
-        margin-left: 150px;
-    }
-
-    #doc {
-        padding-left: 130px;
-    }
-
-    #photos {
-        column-count: 3;
-    }
-
-    #video {
-        padding-left: 100px;
-    }
-
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-    body {
-        background-color: cadetblue;
-    }
-
-    #menu, li {
-        padding-right: 50px;
-        display: inline-block
-    }
-
-    .footer-notes a {
-        margin-left: 220px;
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-/* hero image and animation */
-
-body {
-    background-color: cadetblue;
-}
-
-#hero {
-    height: 600px;
-    width: 100%;
-    background:url(../images/hero-image.jpg) no-repeat center center;
-    
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes hero-zoom {
-
-    from {
-        transform: scale(1);
-    }
-    to { transform: scale(1.3);
-
-    }
-    
-}
-
-#hero-outer {
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
-}
-
-/* text on hero image */
-
-#cover-text  {
-    letter-spacing: 0px;
-    width: 300px;
-    height: 100px;
-    padding-top: 20px;
-    padding-left: 10px;
-    margin-bottom: 50px;
-
-    background-color: rgba(250, 250, 250, 0.8);
-
-    bottom: 150px;
-    right: 80px;
-
-    position: absolute;
-}
-
-#summary-text {
-    color: black;
-    font-family:'Times New Roman', Times, serif;
-    letter-spacing: 0px;
-
-    width: 350px;
-    height: 300px;
-    padding-top: 20px;
-
-    background-color: rgba(250, 250, 250, 0.8);
-
-    bottom: 30px;
-    left: 80px;
-
-    position: absolute;
-}
-
-/* headings */
-
-h1 {
-text-transform: uppercase;
-color: black;
-letter-spacing: 1px;
-margin-left: 10px;
-}
-
-h2 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 140%;
-}
-
-h3{
-    text-align: center;
-    font-size: 100%;
-}
-
-/* logo */
-
-#logo {
-    float: left;
-    font-size: 250%;
-}
-
-#menu {
-    font-size: 125%;
-    letter-spacing: 1px;
-}
-
-#menu, #logo {
-    line-height: 75px;
-}
-
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin-right: 20px
-}
-
-#menu a {
-    text-decoration: none;
-}
-
-#menu a:hover {
-   border-bottom: 2px solid black;
-}
-
-.active {
-    border-bottom: 2px solid black;
-}
-
-/* footer */
-
-footer {
-    width: 100vw;
-    display: inline-block;
-    overflow: hidden;
-    padding: 20px 0;
-    box-sizing: border-box;
-    letter-spacing: 1px;
-    background-color: rgb(35, 221, 28);  
-}
-
-.footer-notes a {
-    text-decoration: none;
-    margin-left: 240px;
-}
-
-.footer a:hover {
-    border-bottom: 2px solid black;
-}
-
-/* gallery  */
-
-#photos {
-    clear: both;
-    line-height: 0;
-    column-count: 3;
-    column-gap: 20px;
-}
-
-#photos > img {
-    width: 100%;
-}
-
-.desc {
-    padding: 10px;
-    text-align: center;
-    background-color: #c5bbbb;
-}
-
-/* map and info */
-
-iframe {
-    width: 50%;
-    height: 300px;
-    padding: 2px;
-}
-
-#info > p {
-    font-size: 1.2em;
-    float: right;
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(250, 199, 199);
-    border: solid 2px white;
-}
-
-#info > p, iframe {
-line-height: 20px;
-}
-
-/* Fun facts */
-
-#facts{
-    clear: both;
-    font-size: 1.5em;
-    width: 100%;
-    padding: 30px;
-    border: solid 5px #ffa500;
-    text-align: center;
-    list-style-type: none;
-}
-
-#tour {
-    clear: both;
-    display: block;
-  width: 100%;
-  border: solid 1px black;
-}
-
-#video {
-    width: 50%;
-    padding: 0;
-    margin-left: 300px;
-}
-
-.source-v {
-    text-align: center;
-}
-
-
-/* history */
-
-#history {
-clear: both;
-font-size: 1.5em;
-width: 100%;
-padding: 30px;
-border: solid 5px #ffa500;
-text-align: center;
-list-style-type: none;
-}
-
-#doc {
-    clear: both;
-    width: 50%;
-    margin-left: 300px;
-    
-}
-
-#contact  {
-    text-align: center;
-}
-
- 
 }
