--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,13 @@
 
 body{
     overflow-x: hidden;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
-    border: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif Arial, Helvetica, sans-serif;
     font-size: 1.0em;
     color: #3a3a3a;
 }
@@ -24,6 +23,7 @@ body{
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
+    overflow: hidden;
 }
 
 @keyframes hero-zoom {
@@ -31,7 +31,7 @@ body{
     from {
         transform: scale(1);
     }
-    to { transform: scale(1.3);
+    to { transform: scale(1.5);
 
     }
     
@@ -41,41 +41,6 @@ body{
     height: 600px;
     width: 100%;
     overflow: hidden;
-}
-
-/* text on hero image */
-
-#cover-text  {
-    letter-spacing: 0px;
-    width: 300px;
-    height: 100px;
-    padding-top: 20px;
-    padding-left: 10px;
-    margin-bottom: 50px;
-
-    background-color: rgba(250, 250, 250, 0.8);
-
-    bottom: 150px;
-    right: 80px;
-
-    position: absolute;
-}
-
-#summary-text {
-    color: black;
-    font-family:'Times New Roman', Times, serif;
-    letter-spacing: 0px;
-
-    width: 350px;
-    height: 300px;
-    padding-top: 20px;
-
-    background-color: rgba(250, 250, 250, 0.8);
-
-    bottom: 30px;
-    left: 80px;
-
-    position: absolute;
 }
 
 /* headings */
@@ -146,7 +111,9 @@ footer {
 
 .footer-notes a {
     text-decoration: none;
-    margin-left: 240px;
+    padding: 50px;
+    margin-left: 180px;
+    text-align: center;
 }
 
 .footer a:hover {
