--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ body{
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
-    overflow: hidden;
 }
 
 @keyframes hero-zoom {
@@ -43,6 +42,16 @@ body{
     overflow: hidden;
 }
 
+#image-text {
+    font-size: 2em;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    background-color: rgb(250, 249, 249, 0.5);
+}
 /* headings */
 
 h1 {
@@ -111,8 +120,7 @@ footer {
 
 .footer-notes a {
     text-decoration: none;
-    padding: 50px;
-    margin-left: 180px;
+    margin-left: 260px;
     text-align: center;
 }
 
