--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@ body{
     overflow: hidden;
 }
 
+/* Hero image Text*/
+
 #image-text {
     font-size: 2em;
     text-align: center;
@@ -52,7 +54,7 @@ body{
     color: black;
     background-color: rgb(250, 249, 249, 0.5);
 }
-/* headings */
+/* Headings */
 
 h1 {
 text-transform: uppercase;
@@ -65,6 +67,7 @@ h2 {
     text-transform: uppercase;
     text-align: center;
     font-size: 140%;
+    padding: 10px;
 }
 
 h3{
@@ -72,7 +75,7 @@ h3{
     font-size: 100%;
 }
 
-/* logo */
+/* Logo for Harlech Castle title */
 
 #logo {
     float: left;
@@ -206,13 +209,7 @@ padding: 30px;
 border: solid 5px #ffa500;
 text-align: center;
 list-style-type: none;
-}
-
-#doc {
-    clear: both;
-    width: 50%;
-    margin-left: 300px;
-    
+background-color: rgb(99, 94, 94, 0.4);
 }
 
 #contact  {
