--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,19 +179,21 @@ line-height: 20px;
     border: solid 5px #ffa500;
     text-align: center;
     list-style-type: none;
+    background-color: rgb(46, 45, 45, 0.2);
 }
 
-#tour {
-    clear: both;
+.map {
     display: block;
-  width: 100%;
-  border: solid 1px black;
+    margin: 0 auto;
+    width: 50%;
 }
+
+
 
 #video {
+    display: block;
+    margin: 0 auto;
     width: 50%;
-    padding: 0;
-    margin-left: 300px;
 }
 
 .source-v {
