--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,3 +447,66 @@ line-height: 20px;
     }
 }
 
+/*Media queries min width 750px*/
+
+@media (min-width: 750px) {
+    #menu li {
+        margin-right: 75px;
+    }
+
+    .footer-notes a {
+        margin-left: 130px;
+    }
+
+    #photos {
+        column-count: 2;
+        padding: 15px;
+    }
+
+    .desc {
+        padding: 8px;
+    }
+
+}
+
+/*Media queries min with 1000px*/
+
+@media (min-width: 1000px) {
+    #menu li {
+        margin-left: 80px;
+        font-size: 120%;
+    }
+
+    #logo {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .footer-notes a {
+        margin-right: 90px;
+    }
+
+    #history {
+        font-size: 120%;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+
+    .desc {
+        width: 101%;
+    }
+
+    #facts {
+        font-size: 120%;
+    }
+
+    #video {
+        width: 50%;
+    }
+}
+
+
+
+
