Change css for footer on large screen sizes. Add pictures to readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@ line-height: 20px;
     }
 
     .footer-notes a {
-        margin-right: 165px;
+        padding-left: 70px;
     }
 
     .map {
