--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,7 +529,7 @@ line-height: 20px;
 
 @media (min-width: 1240px) {
     #menu li {
-        margin-left: 150px;
+        margin-left: 0px;
     }
 }
 
@@ -544,11 +544,12 @@ line-height: 20px;
 
     #menu li {
         float: right;
+        margin: 0;
 
     }
 
     #menu li a {
-        margin: 0px;
+        margin: 20px;
     }
 
     .footer-notes a {
